fixes main nav alignment visual bug

--- a/app/components/Nav.css
+++ b/app/components/Nav.css
@@ -202,6 +202,12 @@
   & .link-list {
     text-align: right; /* keep link-list on the right */
 
+    /* align links with content edge */
+    @add-mixin min-sm {
+      margin-right: 0.5em;
+    }
+
+    /* individual links */
     & .link {
       @add-mixin nav-link;
       /* sizing */
